jEdit 5.2 version history
       (changes since jEdit 5.1.0)
:encoding=UTF-8:

{{{ Version 5.2pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Dale Anson,
Thomas Meyer, Patrick Eibl, László Schmidt, Zsombor Franczia, Bence Pintér
and Alan Ezust for contributing to this release.

{{{ Bug Fixes

- Fix the integration with Unity and other Linux Desktop Environments,
  broken by Patch #3582760. (Björn "Vampire" Kautler)

- JavaDoc stylesheet customized so it is readable in helpviewer
  (#3614229 - Alan Ezust)

- Reload optionally dependent plugins when a plugin is unloaded.
  (#3614456 - Dale Anson)

- Fix #3614883: Alt+'f' multiply bound in "Search and Replace" dialog

}}}
{{{ API Changes

- jEdit now depends on Java 1.7

- Removed deprecated (ambiguous) overloads of IOUtilities.closeQuietly().

}}}
{{{ UI improvements

- EnhancedDialog instances (Search/Replace, Options, Open) now can be closed
  using a single-key close-buffer.shortcut. (#3613007, #3588892 - László Schmidt,
  Zsombor Franczia, Bence Pintér)

- Plugin dependencies are shown in the plugin manager details pane for all three
  tabs. (#3614465 - Dale Anson)

- Increased the scrolling speed in option pane (Matthieu Casanova)

}}}
{{{ Editing

- Patch to toggle word completion of words with digits.
  (#3614607, Patrick Eibl)

}}}
{{{ Miscellaneous

- New macros: Go To Offset, Reverse Selection (#3614563, #3614564 Thomas Meyer)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: